# streaming-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_artist_label_multi.py  003_persona_memory.py  004_distribution.py  005_experiments.py
dashboard/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
dashboard/__tests__/: anomaly-clustering.test.ts
dashboard/src/app/: layout.tsx
dashboard/src/components/: health-heatmap.tsx  kpi-card.tsx  sidebar.tsx  topbar.tsx
dashboard/src/i18n/: request.ts
dashboard/src/lib/: anomaly-clustering.ts  api-client.ts  auth.ts  fixtures.ts  utils.ts
dashboard/src/styles/: globals.css
dashboard/src/types/: anomaly.ts  api.ts
docs/legal/: README.md  banking-redundancy.md  compartmentalization.md  jurisdictional-comparison.md
docs/legal/templates/: nda-contractor.md  registered-agent-rfp.md
docs/operations/: getting-started.md  single-node-deployment.md
docs/runbooks/dr/: README.md  dry-run-checklist.md  postmortem-template.md  scenarios.md
docs/runbooks/farm/: README.md  colo-providers.md  hardware-bom.md  operations-daily.md  scaling-playbook.md  troubleshooting.md
docs/strategy/year-2/: 01-thesis-and-kpis.md  02-data-model.md  03-ml-architecture.md  04-rollout-plan.md  05-risks-mitigations.md  README.md
docs/strategy/year-3/: 01-product-thesis.md  02-product-spec.md  03-go-to-market.md  04-architecture-spinoff.md  05-financial-model.md  06-risks-mitigations.md  README.md
infra/: README.md  prometheus.yml
infra/cloudflare/: cloudflared.yml
infra/compose/: .env.example  control-plane.yml  data-plane.yml  single-node.yml  workers.yml
infra/compose/alertmanager/: alertmanager.yml
infra/compose/clickhouse/: config.xml  init.sql  users.xml
infra/compose/loki/: loki.yml
infra/compose/prometheus/: prometheus-single-node.yml  prometheus.yml
infra/compose/tempo/: tempo.yml
infra/scripts/: backup.sh  bootstrap-node.sh  restore.sh
infra/scripts/dr/: health-snapshot.sh  restore-clickhouse.sh  restore-postgres.sh  rotate-credentials.sh  snapshot-clickhouse.sh  snapshot-postgres.sh
infra/scripts/farm/: provision-modem.sh  rotate-flagged-sim.sh
infra/sms_hub/: Dockerfile  README.md  requirements.txt  server.py
infra/sms_hub/daemon/: sms_modem_daemon.py
infra/sms_hub/scripts/: housekeeping.sh
infra/sms_hub/systemd/: sms-hub-modem@.service
infra/terraform/: cloud-init.yaml  main.tf  terraform.tfvars.example
infra/wireguard/: .gitignore  README.md  gen-keys.sh  render-configs.sh
spikes/year-2/: contextual_bandit_poc.py  lrv_regressor_poc.py  niche_affinity_poc.py
spikes/year-3/: api_skeleton.py  sdk_python_poc.py  sdk_typescript_poc.ts
src/streaming_bot/: __init__.py  config.py  container.py
src/streaming_bot/application/: __init__.py  behavior_engine.py  orchestrator.py  persona_memory_delta.py  playlist_session.py  stream_song.py
src/streaming_bot/domain/: __init__.py  artist.py  entities.py  exceptions.py  history.py  label.py  modem.py  persona.py  playlist.py  ramp_up.py  song.py  territory.py  value_objects.py  value_objects_v2.py
src/streaming_bot/infrastructure/: __init__.py
src/streaming_bot/presentation/: __init__.py  cli.py
tests/: conftest.py
tests/application/: __init__.py  fakes.py  test_account_provisioning.py  test_alias_resolver.py  test_anomaly_service.py  test_asia_dsp_router.py  test_batch_producer.py  test_behavior_engine.py  test_brief_factory.py  test_deezer_routing_policy.py  test_dispatch_use_case.py  test_experiment_analyzer.py  test_experiment_service.py  test_feature_extractor.py  test_playlist_session.py  test_premier_strategy.py  test_produce_track_use_case.py  test_reels_generator.py  test_spillover_orchestrator.py  test_super_fan_emulation.py
tests/application/camouflage/: __init__.py  test_ingest_service.py
tests/application/import_catalog/: __init__.py  fakes.py  test_import_service.py  test_parsers.py  test_tier_classifier.py  (+1 more)
tests/fixtures/: distrokid_dashboard.html  distrokid_dashboard_clean.html  distrokid_signin.html  onerpm_dashboard.html  onerpm_dashboard_clean.html  spotify_for_artists_clean.html  spotify_for_artists_stats.html
tests/infrastructure/: test_dispatcher_router.py  test_ffmpeg_reel_builder.py  test_instagrapi_adapter.py  test_soundcloud_v2_client.py
tests/presentation/: __init__.py  conftest.py  test_amazon_music_strategy.py  test_api_accounts.py  test_api_auth.py  test_api_catalog.py  test_api_health.py  test_api_metrics.py  test_apple_music_strategy.py  test_cli_catalog.py  test_cli_extensions.py  test_container_factories.py  test_deezer_strategy.py  test_jiosaavn_strategy.py  test_kkbox_strategy.py  test_netease_strategy.py  test_repos_adapter_extensions.py  test_soundcloud_strategy.py  test_spotify_strategy.py  test_spotify_strategy_v2.py  test_tidal_strategy.py
tests/unit/: test_acps_score.py  test_anomaly_score.py  test_assignment_service.py  test_capsolver_adapter.py  test_captcha_router.py  test_decision_delay.py  test_encrypted_repo.py  test_feature_vector.py  test_fingerprint.py  test_fingerprint_v2.py  test_ghost_cursor.py  test_instagram_account.py  test_orchestrator.py  test_persona_memory_repo.py  test_premier_eligibility.py  test_proxy_pool.py  test_ratio_controller.py  test_ratio_targets.py  test_reel.py  test_stream_song_use_case.py  test_super_fan_profile.py  test_tier_router.py  test_track_health_scorer.py  test_twocaptcha_adapter.py  test_value_objects.py  test_variant_resolver.py
(+415 files in other folders)
